<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Principal">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTextoTitulo"
        android:layout_width="288dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/Texto1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/tvTextoTitulo3"
        android:layout_width="288dp"
        android:layout_height="33dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/ideacion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="341dp"
        android:layout_height="89dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/ideaciontxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextoTitulo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnIdear"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginBottom="268dp"
        android:text="Idear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="Idear"/>


</androidx.constraintlayout.widget.ConstraintLayout>