<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Principal">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTextoTitulo"
        android:layout_width="288dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/Texto1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/tvTextoTitulo3"
        android:layout_width="288dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/implementacion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextoTitulo"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="337dp"
        android:layout_height="133dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/implementaciontxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextoTitulo3" />

    <Button
        android:id="@+id/btnPrototipar"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:text="Prototipar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:onClick="Prototipar"/>

    <Button
        android:id="@+id/btnEvaluar"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginBottom="100dp"
        android:text="Evaluar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrototipar"
        android:onClick="Evaluar"/>


</androidx.constraintlayout.widget.ConstraintLayout>