<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="288dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/Texto1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/btnImplementacion"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:onClick="Implementacion"
        android:text="Implementación"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIdeacion"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/btnInspiracion"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:onClick="Inspiracion"
        android:text="Inspiración"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <Button
        android:id="@+id/btnIdeacion"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="36dp"
        android:onClick="Ideacion"
        android:text="Ideación"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInspiracion" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="338dp"
        android:layout_height="85dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/Intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />


</androidx.constraintlayout.widget.ConstraintLayout>

